@@ -1,5 +1,6 @@
-2013-11-01 Robert Krause <Ruport@web.de>
+2013-11-03 Robert Krause <Ruport@web.de>
 
+ * added resolution of ip protocol in ipv4 and ipv6
  * added resolution of ethertype in sll and ethernet protocol
  * added resolution of hardware type in sll and arp protocol
  * added resolution of packet type in sll
